Horizontal movement of tables if they overflow the screen (Fixes #8)

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -57,6 +57,10 @@ caption {
     padding-top: 0;
 }
 
+.dataTables_wrapper > div:not(.d-flex) {
+    overflow-x: auto;
+}
+
 [dir] table,
 [dir] .table {
     td,
